--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -29,23 +29,8 @@
   }
   .search__text //texte explicatif//
   {
-    text-align: center;
-    .btn //bouton d'exploration//
-    {
-      background-color: $color-secondary;
-      border-radius: 30px;
-      margin-top: 20px;
-      margin-bottom: 50px;
-      padding: 15px;
-      border: none;
-      box-shadow: 4px 4px 6px darken($color-bckground, 20%);
-      a {
-        padding: 10px;
-        color: white;
-        font-weight: 200;
-      }
-    }
-  }
+    text-align: center;  
+   }
 }
 
 //section fonctionnement//
@@ -96,6 +81,7 @@
   //cartes restaurants//
   .boxcard 
   {
+    position:relative;
     width: 320px;
     background-color: white;
     border-radius: 20px;
@@ -107,6 +93,18 @@
       object-fit: cover;
       border-radius: 20px 20px 0px 0px;
     }
+    .new 
+    {
+      position: absolute;
+      top: 10px;
+      right: 12px;
+      background: $color-tertiary;
+      padding: 4px 10px;
+      color: $color-darkgreen;
+      font-weight: bold;
+      font-size: .8rem;
+      
+    }
     .legend 
     {
       padding-top: 10px;
@@ -114,3 +112,4 @@
       justify-content: space-around;
     }
   }
+  
