--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,4 +2,6 @@ $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 $color-bckground: #f0f0f0;
-$color-grey:darken($color-bckground,60%)
+$color-grey:darken($color-bckground,60%);
+$color-darkgreen:darken($color-tertiary, 30%);
+
