--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,8 +10,7 @@ a {
 }
 
 i {
-  padding-right: 10px;
-  color: #575757;
+  color: #8a8a8a;
 }
 
 header {
@@ -21,7 +20,7 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-bottom: 20px;
 }
 
@@ -30,7 +29,7 @@ header {
 }
 
 footer {
-  padding: 10px 0px 20px 25px;
+  padding: 10px 0px 20px 35px;
   background-color: black;
   color: white;
 }
@@ -39,17 +38,14 @@ footer a {
   color: white;
 }
 
-footer i {
+footer .fas {
   color: white;
+  padding-right: 10px;
 }
 
-footer h2 {
+.name {
   font-family: "shrikland";
   font-style: italic;
-}
-
-h2 {
-  text-indent: 1.5rem;
 }
 
 .like {
@@ -66,11 +62,17 @@ h2 {
 .like .hover-icon {
   position: absolute;
   opacity: 0;
+  color: #9356dc;
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
+  background: linear-gradient(#9356dc, #ff79da);
+  background-clip: text;
+  color: transparent;
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
 }
 
-.like :hover {
+.like .hover-icon:hover {
   cursor: pointer;
-  color: #ff79da;
   opacity: 1;
 }
 
@@ -125,7 +127,7 @@ h2 {
   border: transparent;
   font-size: 1rem;
   font-weight: bold;
-  color: #575757;
+  color: #8a8a8a;
 }
 
 .search .search__location .fa-map-marker-alt {
@@ -141,6 +143,10 @@ h2 {
   margin-bottom: 60px;
 }
 
+.fonctionnement h2 {
+  text-indent: 2rem;
+}
+
 .step {
   background-color: #f0f0f0;
   margin: 25px;
@@ -154,11 +160,15 @@ h2 {
   vertical-align: middle;
 }
 
-.step:hover {
-  background-color: white;
+.step .fas {
+  padding-right: 15px;
 }
 
-.number {
+.step:hover {
+  background-color: #e4d5f6;
+}
+
+.step__number {
   display: inline-block;
   background: #9356dc;
   color: white;
@@ -181,13 +191,17 @@ h2 {
           flex-direction: column;
 }
 
+.restaurant h2 {
+  text-indent: 2rem;
+}
+
 .restaurant .restaurant__cards {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.boxcard {
+.restaurant__boxcard {
   position: relative;
   width: 320px;
   background-color: white;
@@ -195,7 +209,7 @@ h2 {
   height: 250px;
 }
 
-.boxcard img {
+.restaurant__boxcard img {
   width: 100%;
   max-height: 160px;
   -o-object-fit: cover;
@@ -203,23 +217,75 @@ h2 {
   border-radius: 20px 20px 0px 0px;
 }
 
-.boxcard .new {
+.restaurant__boxcard .new {
   position: absolute;
   top: 10px;
   right: 12px;
   background: #99e2d0;
   padding: 4px 10px;
-  color: #32b091;
+  color: #278870;
   font-weight: bold;
   font-size: .8rem;
 }
 
-.boxcard .legend {
-  padding-top: 10px;
+.restaurant__boxcard .restaurant__legend {
+  padding: 10px 30px 10px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.picture {
+  height: 280px;
+  background-color: #f0f0f0;
+  background-image: url("/public/img/palette-gout.jpg");
+  background-size: cover;
+}
+
+.menu {
+  background-color: #f0f0f0;
+  border-radius: 50px 50px 0 0;
+  margin-top: -50px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+}
+
+.menu h3 {
+  font-variant: small-caps;
+  text-indent: 2rem;
+}
+
+.menu__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 40px 10px 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.menu__title .name {
+  font-size: 2.0rem;
+}
+
+.step--menustep {
+  background-color: white;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
