--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 $color-bckground: #f0f0f0;
-$color-grey:darken($color-bckground,60%);
-$color-darkgreen:darken($color-tertiary, 30%);
+$color-grey:darken($color-bckground, 40%);
+$color-darkgreen:darken($color-tertiary, 40%);
+$color-lightprimary:lighten($color-primary, 30%);
+
 
