--- a/scss/_menupage.scss
+++ b/scss/_menupage.scss
@@ -36,6 +36,10 @@ padding-bottom: 30px;
         .name
         {font-size: 2.0rem;
         }
+        .like
+        { display: flex;
+        align-items: center;
+        }
     }
     .menu__subtitle 
     {
@@ -117,3 +121,8 @@ border-radius: 0 20px 20px 0;
         transform: rotate(180deg);
     }
 }
+
+.command
+{ display: flex;
+justify-content: center;
+padding-top: 20px;}
