--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+/*Commun à toutes les pages*/
 body {
   font-family: "roboto", sans-serif;
   margin: 0px;
@@ -43,11 +45,13 @@ footer .fas {
   padding-right: 10px;
 }
 
+/*Titre h2 police differente*/
 .name {
   font-family: "shrikland";
   font-style: italic;
 }
 
+/* propriétés et animation du coeur */
 .like {
   position: relative;
   font-size: 2rem;
@@ -67,8 +71,8 @@ footer .fas {
   background: linear-gradient(#9356dc, #ff79da);
   background-clip: text;
   color: transparent;
-  -webkit-transition-duration: 500ms;
-          transition-duration: 500ms;
+  -webkit-transition-duration: 400ms;
+          transition-duration: 400ms;
 }
 
 .like .hover-icon:hover {
@@ -76,18 +80,22 @@ footer .fas {
   opacity: 1;
 }
 
+/*dégradé couleur sur bouton rose/violet et action au survol*/
 .colorbtn {
   background: -webkit-gradient(linear, left top, right bottom, from(#ff79da), to(#9356dc));
   background: linear-gradient(to bottom right, #ff79da, #9356dc);
+  position: relative;
   width: 200px;
+  cursor: pointer;
+  z-index: 1;
   border-radius: 30px;
   margin-top: 20px;
   margin-bottom: 50px;
   padding: 15px;
   border: none;
   color: white;
-  -webkit-box-shadow: 4px 4px 6px #bdbdbd;
-          box-shadow: 4px 4px 6px #bdbdbd;
+  -webkit-box-shadow: 4px 4px 6px #b0b0b0;
+          box-shadow: 4px 4px 6px #b0b0b0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,6 +104,27 @@ footer .fas {
           justify-content: center;
 }
 
+.colorbtn:hover::after {
+  opacity: 1;
+}
+
+.colorbtn::after {
+  background: -webkit-gradient(linear, left top, right bottom, from(#ff93e1), to(#a16be0));
+  background: linear-gradient(to bottom right, #ff93e1, #a16be0);
+  -webkit-box-shadow: 4px 4px 6px #8a8a8a;
+          box-shadow: 4px 4px 6px #8a8a8a;
+  border-radius: 30px;
+  content: "";
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* page d'accueil */
 .search {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -154,6 +183,7 @@ footer .fas {
   text-indent: 2rem;
 }
 
+/*etapes de fonctionnement*/
 .step {
   background-color: #f0f0f0;
   margin: 25px;
@@ -196,6 +226,9 @@ footer .fas {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -212,12 +245,11 @@ footer .fas {
           align-items: center;
 }
 
+/*cartes restaurants*/
 .restaurant__boxcard {
   position: relative;
-  width: 320px;
   background-color: white;
   border-radius: 20px;
-  height: 250px;
 }
 
 .restaurant__boxcard img {
@@ -236,7 +268,7 @@ footer .fas {
   padding: 4px 10px;
   color: #278870;
   font-weight: bold;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .restaurant__boxcard .restaurant__legend {
@@ -249,6 +281,7 @@ footer .fas {
           justify-content: space-between;
 }
 
+/* les pages de chaque restaurant*/
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -264,26 +297,33 @@ header .fa-arrow-left {
   color: black;
 }
 
+/* la photo du restaurant en-tête*/
+.picturebox {
+  width: 100%;
+  height: 250px;
+}
+
 .picture {
-  height: 280px;
+  max-width: 100%;
   background-color: #f0f0f0;
-  background-image: url("/public/img/palette-gout.jpg");
-  background-size: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .menu {
   background-color: #f0f0f0;
   border-radius: 50px 50px 0 0;
-  margin-top: -50px;
+  margin-top: -45px;
   padding-top: 10px;
   padding-bottom: 30px;
+  position: relative;
 }
 
 .menu .menu__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 10px 40px 10px 30px;
+  padding: 0px 40px 0px 40px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -291,6 +331,7 @@ header .fa-arrow-left {
 
 .menu .menu__title .name {
   font-size: 2.0rem;
+  font-weight: bolder;
 }
 
 .menu .menu__title .like {
@@ -309,12 +350,18 @@ header .fa-arrow-left {
   width: 3rem;
 }
 
+/* bouton de chaque plat*/
 .menustep {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 0.9rem;
   background-color: white;
   position: relative;
+  cursor: pointer;
   margin: 15px;
   padding-left: 15px;
   border-radius: 20px;
@@ -322,8 +369,7 @@ header .fa-arrow-left {
           box-shadow: 4px 4px 6px #bdbdbd;
 }
 
-.menustep:hover .check--off {
-  border-radius: 0;
+.menustep:hover .check {
   -webkit-transform: translate(-75px);
           transform: translate(-75px);
   -webkit-transition: -webkit-transform 1500ms;
@@ -341,44 +387,49 @@ header .fa-arrow-left {
   transition: transform 1000ms 500ms, -webkit-transform 1000ms 500ms;
 }
 
+.menustep:hover .menu__price {
+  -webkit-transform: translate(-65px);
+          transform: translate(-65px);
+  -webkit-transition: -webkit-transform 1500ms;
+  transition: -webkit-transform 1500ms;
+  transition: transform 1500ms;
+  transition: transform 1500ms, -webkit-transform 1500ms;
+}
+
 .menu__choice {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 85%;
 }
 
 .menu__choice p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 70%;
+  width: 90%;
 }
 
 .menu__price {
-  position: absolute;
-  bottom: 15px;
-  right: 20px;
+  width: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   font-weight: bold;
 }
 
-.check, .check .check--off, .check .check--on {
+/*bloc de validation choix*/
+.check {
   position: absolute;
   bottom: 0px;
-  right: 0px;
-  background-color: white;
+  right: -80px;
+  background-color: #99e2d0;
   width: 20%;
   height: 100%;
   border-radius: 0 20px 20px 0;
-}
-
-.check .check--off {
-  width: 100%;
-  z-index: 10;
-}
-
-.check .check--on {
-  background: #99e2d0;
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
