--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,15 @@
 body {
   font-family: "roboto", sans-serif;
   margin: 0px;
-  max-width: 400px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/*Titre h2 police differente*/
+.name {
+  font-family: 'Shrikhand', cursive;
+  font-size: 1.4rem;
 }
 
 a {
@@ -19,15 +27,13 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
-.logo img {
+.logo {
   width: 12rem;
+  margin: auto;
+  padding: 12px;
 }
 
 footer {
@@ -43,41 +49,6 @@ footer a {
 footer .fas {
   color: white;
   padding-right: 10px;
-}
-
-/*Titre h2 police differente*/
-.name {
-  font-family: "shrikland";
-  font-style: italic;
-}
-
-/* propriétés et animation du coeur */
-.like {
-  position: relative;
-  font-size: 2rem;
-  margin-right: 20px;
-  margin-top: 5px;
-}
-
-.like .default-icon {
-  position: absolute;
-}
-
-.like .hover-icon {
-  position: absolute;
-  opacity: 0;
-  color: #9356dc;
-  background: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
-  background: linear-gradient(#9356dc, #ff79da);
-  background-clip: text;
-  color: transparent;
-  -webkit-transition-duration: 300ms;
-          transition-duration: 300ms;
-}
-
-.like .hover-icon:hover {
-  cursor: pointer;
-  opacity: 1;
 }
 
 /*dégradé couleur sur bouton rose/violet et action au survol*/
@@ -137,6 +108,7 @@ footer .fas {
       -ms-flex-align: center;
           align-items: center;
   background-color: #f0f0f0;
+  /*formulaire de recherhe*/
 }
 
 .search .search__location {
@@ -156,6 +128,7 @@ footer .fas {
   background-color: #d7d7d7;
   border-top: 2px groove #d7d7d7;
   vertical-align: middle;
+  /* icone localisation*/
 }
 
 .search .search__location input {
@@ -174,7 +147,9 @@ footer .fas {
   text-align: center;
 }
 
+/*section fonctionnement*/
 .fonctionnement {
+  width: 100%;
   margin-top: 40px;
   margin-bottom: 60px;
 }
@@ -184,9 +159,23 @@ footer .fas {
 }
 
 /*etapes de fonctionnement*/
+.containstep {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .step {
   background-color: #f0f0f0;
-  margin: 25px;
+  width: 70%;
+  margin: 15px;
   padding: 15px;
   border-radius: 20px;
   display: -webkit-box;
@@ -282,29 +271,16 @@ footer .fas {
 }
 
 /* les pages de chaque restaurant*/
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding-left: 0px;
-}
-
 header .fa-arrow-left {
   font-size: 1.3rem;
   color: black;
+  padding-top: 20px;
 }
 
 /* la photo du restaurant en-tête*/
-.picturebox {
-  width: 100%;
-  height: 250px;
-}
-
 .picture {
-  max-width: 100%;
+  width: 100%;
+  max-height: 250px;
   background-color: #f0f0f0;
   -o-object-fit: cover;
      object-fit: cover;
@@ -327,11 +303,6 @@ header .fa-arrow-left {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.menu .menu__title .name {
-  font-size: 2.0rem;
-  font-weight: bolder;
 }
 
 .menu .menu__title .like {
@@ -367,11 +338,16 @@ header .fa-arrow-left {
   border-radius: 20px;
   -webkit-box-shadow: 4px 4px 6px #bdbdbd;
           box-shadow: 4px 4px 6px #bdbdbd;
+  /*apparition coche verte*/
+}
+
+.menustep:hover {
+  /* rotation  coche verte */
 }
 
 .menustep:hover .check {
-  -webkit-transform: translate(-75px);
-          transform: translate(-75px);
+  -webkit-transform: translate(-95px);
+          transform: translate(-95px);
   -webkit-transition: -webkit-transform 1500ms;
   transition: -webkit-transform 1500ms;
   transition: transform 1500ms;
@@ -403,6 +379,12 @@ header .fa-arrow-left {
   width: 85%;
 }
 
+.menu__choice h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .menu__choice p {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -425,7 +407,7 @@ header .fa-arrow-left {
 .check {
   position: absolute;
   bottom: 0px;
-  right: -80px;
+  right: -100px;
   background-color: #99e2d0;
   width: 20%;
   height: 100%;
@@ -449,6 +431,7 @@ header .fa-arrow-left {
 }
 
 .command {
+  background-color: #f0f0f0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -456,6 +439,34 @@ header .fa-arrow-left {
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 20px;
+}
+
+/* propriétés et animation du coeur */
+.like {
+  position: relative;
+  font-size: 2rem;
+  margin-right: 20px;
+  margin-top: 5px;
+}
+
+.like .default-icon {
+  position: absolute;
+}
+
+.like .hover-icon {
+  position: absolute;
+  opacity: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
+  background-image: linear-gradient(#9356dc, #ff79da);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
+.like .hover-icon:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 /*apparition section pages en décalé*/
@@ -487,24 +498,26 @@ header .fa-arrow-left {
 /*animation loader page d'accueil*/
 @-webkit-keyframes spin {
   0% {
-    -webkit-transform: scale(1.5) rotate(2turn);
-            transform: scale(1.5) rotate(2turn);
+    -webkit-transform: scale(2) rotate(2turn);
+            transform: scale(2) rotate(2turn);
     opacity: 1;
   }
   100% {
-    -webkit-transform: scale(0) opacity 0;
-            transform: scale(0) opacity 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
   }
 }
 @keyframes spin {
   0% {
-    -webkit-transform: scale(1.5) rotate(2turn);
-            transform: scale(1.5) rotate(2turn);
+    -webkit-transform: scale(2) rotate(2turn);
+            transform: scale(2) rotate(2turn);
     opacity: 1;
   }
   100% {
-    -webkit-transform: scale(0) opacity 0;
-            transform: scale(0) opacity 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
   }
 }
 
@@ -554,11 +567,13 @@ header .fa-arrow-left {
 /* animation page d'accueil*/
 .loader {
   position: absolute;
-  width: 150px;
+  width: 60px;
+  height: 60px;
   top: 50%;
-  left: 25%;
-  border-radius: 100%;
-  border: 10px double #278870;
+  left: 50%;
+  margin-left: -3rem;
+  border-radius: 50%;
+  border: 20px double #278870;
   border-top-color: #9356dc;
   border-bottom-color: #99e2d0;
   border-left-color: #ff79da;
@@ -568,23 +583,127 @@ header .fa-arrow-left {
 }
 
 .page {
-  -webkit-animation: fade 2s;
-          animation: fade 2s;
+  -webkit-animation: fade 1s;
+          animation: fade 1s;
   opacity: 1;
 }
 
 .search {
-  -webkit-animation: clearness 1s;
-          animation: clearness 1s;
+  -webkit-animation: clearness 1100ms;
+          animation: clearness 1100ms;
 }
 
 .fonctionnement {
-  -webkit-animation: clearness 2s;
-          animation: clearness 2s;
+  -webkit-animation: clearness 1500ms;
+          animation: clearness 1500ms;
 }
 
 .restaurant {
-  -webkit-animation: clearness 3s;
-          animation: clearness 3s;
+  -webkit-animation: clearness 2000ms;
+          animation: clearness 2000ms;
+}
+
+@media screen and (min-width: 500px) {
+  header .logo {
+    width: 18rem;
+  }
+  header .fa-arrow-left {
+    padding-left: 20px;
+    padding-top: 30px;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .name {
+    font-size: 1.7rem;
+  }
+  /*page d'accueil*/
+  .restaurant__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .restaurant__boxcard {
+    width: 35%;
+  }
+  /*pages restaurants*/
+  .menu__contains {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+  }
+  .menu__entrees {
+    width: 33%;
+  }
+  .menu__plats {
+    width: 33%;
+  }
+  .menu__desserts {
+    width: 33%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .name {
+    font-size: 1.8rem;
+  }
+  /*page d'accueil*/
+  .containdesktop {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .fonctionnement {
+    width: 30%;
+  }
+  .containstep {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .step {
+    width: 300px;
+  }
+  .restaurant {
+    background-color: white;
+    margin-top: 40px;
+    width: 70%;
+  }
+  .restaurant h2 {
+    margin-left: 50px;
+  }
+  .restaurant__boxcard {
+    background-color: #f0f0f0;
+  }
+  .restaurant__boxcard img {
+    min-height: 200px;
+  }
+  /*pages restaurants*/
+  .menu {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
+  .menustep {
+    margin-right: 25px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
