--- a/scss/_menupage.scss
+++ b/scss/_menupage.scss
@@ -2,136 +2,142 @@
 
 header
 {
-display: flex;
-justify-content: space-evenly;
-padding-left: 0px;
-    .fa-arrow-left
+.fa-arrow-left
     {
     font-size: 1.3rem;
     color: black;
+    padding-top: 20px;
     }
 }
 
 /* la photo du restaurant en-tête*/
-.picturebox
-{width:100%;
-height:250px}
 
 .picture 
 {
-max-width: 100%;
-background-color: $color-bckground;
-object-fit: cover; 
+    width: 100%;
+    max-height:250px;
+    background-color: $color-bckground;
+    object-fit: cover; 
 }
 
 .menu 
 {
-background-color: $color-bckground;
-border-radius: 50px 50px 0 0;
-margin-top: -45px;
-padding-top: 10px;
-padding-bottom: 30px;
-position: relative;
+    background-color: $color-bckground;
+    border-radius: 50px 50px 0 0;
+    margin-top: -45px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    position: relative;
     .menu__title
     {
-    display: flex;
-    padding: 0px 40px 0px 40px;
-    justify-content: space-between;
-        .name
-        {font-size: 2.0rem;
-        font-weight: bolder;
-        }
+        display: flex;
+        padding: 0px 40px 0px 40px;
+        justify-content: space-between;
         .like
-        { display: flex;
-        align-items: center;
+        { 
+            display: flex;
+            align-items: center;
         }
     }
     .menu__subtitle 
     {
-    font-variant:small-caps;
-    margin-left: 2rem;
-    border-bottom: 4px solid $color-tertiary;
-    width: 3rem;
+        font-variant:small-caps;
+        margin-left: 2rem;
+        border-bottom: 4px solid $color-tertiary;
+        width: 3rem;
     }
 }
 /* bouton de chaque plat*/
 .menustep
-{overflow:hidden;
-text-overflow: ellipsis;
-white-space: nowrap;
-display: flex;
-font-size: 0.9rem;
-background-color: white;
-position:relative;
-cursor: pointer;
-margin: 15px;
-padding-left: 15px;
-border-radius: 20px;
-box-shadow: 4px 4px 6px darken($color-bckground, 20%);
-&:hover 
+{
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: flex;
+    font-size: 0.9rem;
+    background-color: white;
+    position:relative;
+    cursor: pointer;
+    margin: 15px;
+    padding-left: 15px;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px darken($color-bckground, 20%);
+    /*apparition coche verte*/
+    &:hover 
     {
-        .check // faire apparaitre coche verte//
+        .check 
         {
-        transform: translate(-75px) ;
-        transition: transform 1500ms;       
+            transform: translate(-95px) ;
+            transition: transform 1500ms;       
         }
-        .fas // rotation de la coche verte //
+        /* rotation  coche verte */
+        .fas 
         {
-        transform: rotate(0deg);
-        transition: transform 1000ms 500ms;  
+            transform: rotate(0deg);
+            transition: transform 1000ms 500ms;  
         }
         .menu__price
         {
-        transform: translate(-65px) ;
-        transition: transform 1500ms; 
+            transform: translate(-65px) ;
+            transition: transform 1500ms; 
         } 
 
     }
 }
 
 .menu__choice
-{ overflow: hidden;
-text-overflow: ellipsis;
-white-space: nowrap;
- width: 85%; 
+{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 85%;
+ h4 
+    {  
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+     }
  p 
- {
-overflow: hidden;
- text-overflow: ellipsis;
-white-space: nowrap;
-width: 90%;}
-   
-  }
+    {  
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 90%;
+    }
+}
+
 .menu__price
 {   width: 15%;
     display: flex;
     align-items: flex-end;
-    font-weight: bold;
-    
+    font-weight: bold;    
 }
+
 /*bloc de validation choix*/
 .check 
 {
-position: absolute;
-bottom: 0px;
-right:-80px;
-background-color: $color-tertiary;
-width: 20%;
-height:100%;
-border-radius: 0 20px 20px 0;
-display:flex;
-justify-content: center;
-align-items: center;
-   .fas
+    position: absolute;
+    bottom: 0px;
+    right:-100px;
+    background-color: $color-tertiary;
+    width: 20%;
+    height:100%;
+    border-radius: 0 20px 20px 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    .fas
     {
-    color: white;
-    font-size: 1.5rem;
-    transform: rotate(180deg);
+        color: white;
+        font-size: 1.5rem;
+        transform: rotate(180deg);
     }
 }
 
 .command
-{ display: flex;
-justify-content: center;
-padding-top: 20px; 
+{
+    background-color: $color-bckground;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px; 
 }
